# tidal-cli

./: Cargo.toml  README  README.md
src/: main.rs
src/requests/dev/catalogue/: albums.http  artist.http  traks.http
src/requests/dev/search/: search.http
src/requests/dev/user/: users.http
