[package]
name = "tidal-cli"
version = "0.1.0"
description = "A terminal user interface for Tidal inspired in spotify-tui"
keywords = ["tidal", "cli", "terminal", "tui"]
categories = ["command-line-utilities"]
authors = ["Agustin Mediotti <agustinmediotti@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.42.0", features = ["full"] }
rand = "0.8.5"